# Constellation.Gate

./: .gitignore  .pre-commit-config.yaml  requirements-ci.txt
constellation-gate/: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  ci_discovery.config.json  pyproject.toml
constellation-gate/.github/workflows/: integration.yml
constellation-gate/contracts/: ADMIN_REGISTER_SPEC.md  NODE_REGISTRATION_SPEC.md  README.md  ROUTING_POLICY_SPEC.md  TRANSPORT_PACKET_SPEC.md  WORKFLOW_SPEC.md  transport-packet.schema.json
constellation-gate/current_work/: last files.md  setup-new-workspace.yaml
constellation-gate/deploy/: README_DEPLOY.md  prometheus.yml
constellation-gate/deploy/terraform/: main.tf  outputs.tf  variables.tf  versions.tf
constellation-gate/docs/: dispatch-semantics.md  gate-kernel.md  gate-workspace-filetree.md  ingress-policy.md  inventory-vs-target.md  repo-readiness-summary.md  target-filetree.md  transport-rename-cheatsheet.md  workflow-engine.md
constellation-gate/docs/archive/: gate-md-ingestion-export.md
constellation-gate/reports/: ci_discovery_report.json  ci_discovery_supplemental_findings.json
constellation-gate/scripts/: ci_discovery.py  sync_contracts_from_sdk.sh  validate_contracts.py
constellation-gate/tests/api/: test_admin_register_endpoint.py  test_errors.py  test_execute_endpoint.py  test_execute_endpoint_errors.py  test_health_endpoint.py  test_registry_endpoint.py
constellation-gate/tests/architecture/: test_gate_dispatch_authority.py  test_gate_only_routing.py  test_lineage_reentry.py  (+2 more)
(+200 files in other folders)
