[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constellation-gate"
version = "1.0.0"
description = "Canonical Gate routing authority for the Constellation system"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
  { name = "OpenAI" }
]
dependencies = [
  # constellation-node-sdk is not published to PyPI; it lives in the sibling
  # Quantum-L9/Gate_SDK repository. Pin an exact commit so clean CI runners and
  # pre-commit hook environments resolve the same canonical transport contract.
  "constellation-node-sdk @ git+https://github.com/Quantum-L9/Gate_SDK.git@0d50f64574f78a8ad9c32f5c4e13fcbf5644648e",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.2",
  "starlette>=0.37.2",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["constellation_gate"]
